--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,2 +1,441 @@
+@charset "UTF-8";
 body {
-  background-color: yellow; }
+  font-family: "Open Sans", sans-serif; }
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .slick-list:focus {
+    outline: none; }
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block; }
+  .slick-track:before, .slick-track:after {
+    content: "";
+    display: table; }
+  .slick-track:after {
+    clear: both; }
+  .slick-loading .slick-track {
+    visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+  [dir="rtl"] .slick-slide {
+    float: right; }
+  .slick-slide img {
+    display: block; }
+  .slick-slide.slick-loading img {
+    display: none; }
+  .slick-slide.dragging img {
+    pointer-events: none; }
+  .slick-initialized .slick-slide {
+    display: block; }
+  .slick-loading .slick-slide {
+    visibility: hidden; }
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./../img/ajax-loader.gif") center center no-repeat; }
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: url("../fonts/slick.eot");
+  src: url("../fonts/slick.eot?#iefix") format("embedded-opentype"), url("../fonts/slick.woff") format("woff"), url("../fonts/slick.ttf") format("truetype"), url("../fonts/slick.svg#slick") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none; }
+  .slick-prev:hover, .slick-prev:focus,
+  .slick-next:hover,
+  .slick-next:focus {
+    outline: none;
+    background: transparent;
+    color: transparent; }
+    .slick-prev:hover:before, .slick-prev:focus:before,
+    .slick-next:hover:before,
+    .slick-next:focus:before {
+      opacity: 1; }
+  .slick-prev.slick-disabled:before,
+  .slick-next.slick-disabled:before {
+    opacity: 0.25; }
+  .slick-prev:before,
+  .slick-next:before {
+    font-family: "slick";
+    font-size: 20px;
+    line-height: 1;
+    color: white;
+    opacity: 0.75;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+
+.slick-prev {
+  left: -25px; }
+  [dir="rtl"] .slick-prev {
+    left: auto;
+    right: -25px; }
+  .slick-prev:before {
+    content: "←"; }
+    [dir="rtl"] .slick-prev:before {
+      content: "→"; }
+
+.slick-next {
+  right: -25px; }
+  [dir="rtl"] .slick-next {
+    left: -25px;
+    right: auto; }
+  .slick-next:before {
+    content: "→"; }
+    [dir="rtl"] .slick-next:before {
+      content: "←"; }
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px; }
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%; }
+  .slick-dots li {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer; }
+    .slick-dots li button {
+      border: 0;
+      background: transparent;
+      display: block;
+      height: 20px;
+      width: 20px;
+      outline: none;
+      line-height: 0px;
+      font-size: 0px;
+      color: transparent;
+      padding: 5px;
+      cursor: pointer; }
+      .slick-dots li button:hover, .slick-dots li button:focus {
+        outline: none; }
+        .slick-dots li button:hover:before, .slick-dots li button:focus:before {
+          opacity: 1; }
+      .slick-dots li button:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "•";
+        width: 20px;
+        height: 20px;
+        font-family: "slick";
+        font-size: 6px;
+        line-height: 20px;
+        text-align: center;
+        color: black;
+        opacity: 0.25;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale; }
+    .slick-dots li.slick-active button:before {
+      color: black;
+      opacity: 0.75; }
+
+.wrapper--header {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  margin-top: 40px; }
+
+.container {
+  min-width: 320px;
+  max-width: 1175px;
+  margin: 0 auto; }
+
+.container--flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.header__logo {
+  margin-left: 5%; }
+
+.logo {
+  font-family: 'Pacifico';
+  color: #ffc155;
+  font-size: 30px; }
+
+.hamburger {
+  margin: -15px 20px 0 0;
+  width: 50px;
+  height: 40px;
+  position: relative; }
+  @media (min-width: 320px) {
+    .hamburger {
+      display: block; } }
+  @media (min-width: 768px) {
+    .hamburger {
+      display: none; } }
+
+.hamburger__line {
+  display: block;
+  background-color: #ffc155;
+  height: 5px;
+  width: 100%;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  position: absolute; }
+
+.hamburger__line:first-child {
+  top: 0; }
+
+.hamburger__line:nth-child(2) {
+  top: 15px; }
+
+.hamburger__line:last-child {
+  top: 30px; }
+
+.hamburger__line--active:nth-child(2) {
+  width: 0;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.hamburger__line--active:first-child {
+  top: 20px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.hamburger__line--active:last-child {
+  top: 20px;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg); }
+
+.nav {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (min-width: 320px) {
+    .nav {
+      text-align: center;
+      width: 100%;
+      display: block;
+      position: absolute;
+      top: 50px;
+      left: -800px; } }
+  @media (min-width: 768px) {
+    .nav {
+      position: static;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      width: 500px;
+      margin-right: 15px; } }
+  @media (min-width: 1024px) {
+    .nav {
+      width: 540px; } }
+  @media (min-width: 320px) {
+    .nav__item {
+      display: block; } }
+  @media (min-width: 768px) {
+    .nav__item {
+      display: inline-block; } }
+  .nav__link {
+    font-family: "Open Sans", sans-serif;
+    color: white;
+    font-size: 14px;
+    display: block;
+    width: 100%;
+    padding: 10px 0; }
+    .nav__link:hover {
+      color: #ffc155; }
+
+@media (min-width: 320px) {
+  .nav--mobile {
+    display: block;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; } }
+
+.banner {
+  max-width: 1500px;
+  margin: 0 auto;
+  position: relative; }
+
+.slick-prev {
+  display: block;
+  left: 0px;
+  z-index: 1;
+  margin-left: 5%; }
+
+.slick-next {
+  display: block;
+  right: 0;
+  z-index: 1;
+  margin-right: 5%; }
+
+.slick-dots {
+  bottom: 25px; }
+
+.slick-dots li button:before {
+  color: white;
+  opacity: 1; }
+
+.slick-dots li.slick-active button:before {
+  color: white;
+  opacity: 1;
+  border: 2px solid white;
+  -webkit-border-radius: 50%;
+          border-radius: 50%; }
+
+.banner__content {
+  text-align: center;
+  position: absolute;
+  top: 250px;
+  color: white;
+  width: 100%; }
+
+.banner__content--hidden {
+  opacity: 0.2; }
+
+.container--banner {
+  max-width: 700px;
+  margin: 0 auto; }
+
+.banner__heading {
+  font-weight: bold; }
+  @media (min-width: 320px) {
+    .banner__heading {
+      font-size: 30px; } }
+  @media (min-width: 768px) {
+    .banner__heading {
+      font-size: 45px; } }
+
+@media (min-width: 320px) {
+  .banner__paragraph {
+    display: none; } }
+
+@media (min-width: 768px) {
+  .banner__paragraph {
+    display: block;
+    font-size: 25px; } }
+
+.banner__button {
+  background: #709dca;
+  border: none;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  width: 150px;
+  height: 50px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 17px;
+  font-weight: bold;
+  outline: none; }
+  .banner__button:hover {
+    background: #ffc155;
+    cursor: pointer; }
+  @media (min-width: 768px) {
+    .banner__button {
+      margin-top: 100px; } }
+  @media (min-width: 320px) {
+    .banner__button {
+      margin-top: 70px; } }
