--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,1 +1,12 @@
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+@import "slick";
+@import "slick-theme";
+@import "variables";
 @import "head";
+@import "banner";
+
+
+
