--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -2,6 +2,9 @@
 body {
   font-family: "Open Sans", sans-serif; }
 
+a {
+  text-decoration: none; }
+
 /* Slider */
 .slick-slider {
   position: relative;
@@ -223,6 +226,12 @@ body {
 
 .header__logo {
   margin-left: 5%; }
+  @media (min-width: 320px) {
+    .header__logo {
+      margin-top: -30px; } }
+  @media (min-width: 768px) {
+    .header__logo {
+      margin-top: -10px; } }
 
 .logo {
   font-family: 'Pacifico';
@@ -315,7 +324,8 @@ body {
     position: absolute;
     top: 50px;
     left: 0;
-    transition: 0.3s; } }
+    transition: 0.3s;
+    margin-left: -40px; } }
 
 .banner {
   max-width: 1500px;
@@ -344,14 +354,19 @@ body {
 
 .slick-prev:before, .slick-next:before {
   opacity: 1;
-  font-family: 'Lato', sans-serif;
-  color: #ffc155; }
+  color: #ffc155;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased; }
 
 .slick-prev:before {
-  content: "<"; }
+  content: "\f053";
+  margin: 1px 2px 0 0; }
 
 .slick-next:before {
-  content: ">"; }
+  content: "\f054";
+  margin: 1px 0 0 2px; }
 
 .slick-dots {
   bottom: 25px; }
@@ -364,7 +379,8 @@ body {
   color: white;
   opacity: 1;
   border: 2px solid white;
-  border-radius: 50%; }
+  border-radius: 50%;
+  margin-top: -2px; }
 
 .banner__content {
   text-align: center;
