--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -31,16 +31,21 @@
 
 .slick-prev:before, .slick-next:before {
   opacity:1;
-  font-family: 'Lato', sans-serif;
   color: $logo_color;
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
 }
 
 .slick-prev:before {
-  content: "<";
+  content: "\f053";
+  margin: 1px 2px 0 0;
 }
 
 .slick-next:before {
-  content: ">";
+  content: "\f054";
+  margin: 1px 0 0 2px;
 }
 
 .slick-dots {
@@ -57,6 +62,7 @@
   opacity: 1;
   border: 2px solid white;
   border-radius: 50%;
+  margin-top: -2px;
 }
 
 .banner__content {
