--- a/app/scss/_head.scss
+++ b/app/scss/_head.scss
@@ -20,12 +20,21 @@
 
 .header__logo {
   margin-left: 5%;
+
+  @media (min-width: 320px) {
+    margin-top: -30px;
+  }
+
+  @media (min-width: 768px) {
+    margin-top: -10px;
+  }
 }
 
 .logo {
   font-family: 'Pacifico';
   color: $logo_color;
   font-size: 30px;
+
 }
 
 .hamburger {
@@ -137,6 +146,7 @@
     top: 50px;
     left: 0;
     transition: 0.3s;
+    margin-left: -40px;
   }
 }
 
