--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,7 +1,9 @@
 body {
   font-family: "Open Sans", sans-serif;
 }
-
+a {
+  text-decoration: none;
+}
 @import "slick";
 @import "slick-theme";
 @import "variables";
