--- a/app/css/main.css
+++ b/app/css/main.css
@@ -658,7 +658,141 @@ li {
           transform: scale(0.9); }
 
 .portfolio__header {
-  text-align: center; }
+  text-align: center;
+  margin-top: 80px; }
 
 .portfolio__heading {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-weight: 900;
+  color: #709dca; }
+
+.icon {
+  position: relative;
+  display: inline-block; }
+
+.icon:before {
+  right: 35px;
+  top: 11px;
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 1px;
+  background-color: #ffc155; }
+
+.icon:after {
+  left: 35px;
+  top: 11px;
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 1px;
+  background-color: #ffc155; }
+
+.fa-cog {
+  color: #ffc155;
+  font-size: 25px; }
+
+.portfolio__desc {
+  width: 70%;
+  margin: 30px auto;
+  font-size: 15px;
+  color: #062033; }
+
+.list--portfolio {
+  margin: 0 auto;
+  width: 40%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.list__item {
+  display: inline-block; }
+
+.list__link {
+  display: block;
+  padding: 5px 10px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  font-size: 15px;
+  color: #062033; }
+  .list__link:hover {
+    background: #709dca;
+    color: white; }
+
+.portfolio__gallery {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.gallery__item {
+  width: 25%;
+  position: relative; }
+  .gallery__item:hover > .item__hover {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    cursor: pointer; }
+
+.item__hover {
+  display: none;
+  left: 0;
+  top: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: #ffc155;
+  z-index: 1;
+  opacity: 0.85;
+  color: white;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .item__hover img {
+    display: block;
+    padding-bottom: 20px; }
+
+.gallery__link {
+  display: block;
+  width: 100%;
+  height: 100%; }
+  .gallery__link:hover .gallery__item--hover {
+    display: block; }
+  .gallery__link img {
+    display: block;
+    width: inherit;
+    height: inherit; }
