--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -1,7 +1,126 @@
-.portfolio__header{
+.portfolio__header {
   text-align: center;
+  margin-top: 80px;
 }
 
 .portfolio__heading {
   text-transform: uppercase;
+  font-weight: 900;
+  color: $theme_color;
+}
+
+.icon {
+  position: relative;
+  display: inline-block;
+}
+
+.icon:before {
+  right: 35px;
+  top: 11px;
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 1px;
+  background-color: $logo_color;
+}
+
+.icon:after {
+  left: 35px;
+  top: 11px;
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 1px;
+  background-color: $logo_color;
+}
+
+.fa-cog {
+  color: $logo_color;
+  font-size: 25px;
+}
+
+.portfolio__desc {
+  width: 70%;
+  margin: 30px auto;
+  font-size: 15px;
+  color: #062033;
+}
+
+.list--portfolio {
+  margin: 0 auto;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.list__item {
+  display: inline-block;
+}
+
+.list__link {
+  display: block;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  color: #062033;
+
+  &:hover {
+    background: $theme_color;
+    color: white;
+  }
+}
+
+.portfolio__gallery {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.gallery__item {
+  width: 25%;
+  position: relative;
+
+  &:hover > .item__hover {
+    display: flex;
+    cursor: pointer;
+  }
+}
+
+.item__hover {
+  display: none;
+  left: 0;
+  top: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: $logo_color;
+  z-index: 1;
+  opacity: 0.85;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  img {
+    display: block;
+    padding-bottom: 20px;
+  }
+}
+
+.gallery__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  &:hover .gallery__item--hover {
+    display: block;
+  }
+
+  img {
+    display: block;
+    width: inherit;
+    height: inherit;
+  }
 }
