--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -48,19 +48,32 @@
 
 .list--portfolio {
   margin: 0 auto;
-  width: 40%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  @media (min-width: 320px) {
+    width: 100%;
+    padding-left: 0px;
+  }
+
+  @media (min-width: 1024px) {
+    display: flex;
+    width: 40%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .list__item {
-  display: inline-block;
+  @media (min-width: 320px) {
+    display: block;
+  }
+
+  @media (min-width: 1024px) {
+    display: inline-block;
+  }
 }
 
 .list__link {
   display: block;
-  padding: 5px 10px;
+  padding: 0;
   border-radius: 5px;
   font-size: 15px;
   color: #062033;
@@ -68,6 +81,9 @@
   &:hover {
     background: $theme_color;
     color: white;
+  }
+  @media (min-width: 1024px) {
+    padding: 5px 10px;
   }
 }
 
@@ -80,8 +96,19 @@
 }
 
 .gallery__item {
-  width: 25%;
   position: relative;
+
+  @media (min-width: 320px) {
+    width: 100%;
+  }
+
+  @media (min-width: 768px) {
+    width: 50%;
+  }
+
+  @media (min-width: 1024px) {
+    width: 25%;
+  }
 
   &:hover > .item__hover {
     display: flex;
