started commets block

--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -3,7 +3,7 @@
   margin-top: 80px;
 }
 
-.portfolio__heading {
+.heading {
   text-transform: uppercase;
   font-weight: 900;
   color: $theme_color;
