--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -227,7 +227,8 @@ li {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+  flex-wrap: wrap; }
 
 .header__logo {
   margin-left: 5%; }
@@ -773,23 +774,27 @@ li {
   max-width: 1175px; }
 
 .newsline__block {
-  width: 20%;
   margin: 0 15px; }
-
-.logo--footer {
-  font-size: 22px;
-  color: white;
-  font-weight: normal; }
+  @media (min-width: 320px) {
+    .newsline__block {
+      width: 90%; } }
+  @media (min-width: 768px) {
+    .newsline__block {
+      width: 40%; } }
+  @media (min-width: 1024px) {
+    .newsline__block {
+      width: 20%; } }
 
 .company__desc, .contacts__text, .tweet__text, .subscribe__text {
   color: #c3c3c3;
   font-family: 'Lato', sans-serif;
   font-size: 14px; }
 
-.contacts__header, .tweets__header, .subscribe__header {
+.logo--footer, .contacts__header, .tweets__header, .subscribe__header {
   font-size: 22px;
   color: white;
-  font-weight: normal; }
+  font-weight: normal;
+  margin-top: 30px; }
 
 .address, .email, .phone-number {
   display: block;
@@ -864,10 +869,12 @@ li {
   font-size: 14px;
   color: #c4c4c4;
   background-color: #172227;
-  height: 90px; }
+  height: 90px;
+  text-align: center; }
 
 .container--copyright {
-  height: inherit; }
+  height: inherit;
+  flex-wrap: nowrap; }
 
 .social__item {
   display: inline-block;
@@ -882,8 +889,6 @@ li {
   color: white; }
   .social__link .fa {
     margin: 7px; }
-  .social__link .fa-facebook {
-    margin-left: 10px; }
   .social__link:hover {
     background-color: #709dca; }
 
