--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -14,9 +14,7 @@
     display: block;
     width: 50%;
     background-image: url('../img/about.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
   }
 }
 
