--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -135,6 +135,10 @@
   flex-wrap: nowrap;
 }
 
+.social__items {
+  padding-left: 0;
+}
+
 .social__item {
   display: inline-block;
   padding-left: 0;
