--- a/app/scss/_service.scss
+++ b/app/scss/_service.scss
@@ -31,7 +31,8 @@
 
 .service__item {
   position: relative;
-  margin-left: 50px;
+  margin-left: 55px;
+  margin-right: 10px;
 
   @media (min-width: 320px) {
     width: 90%;
@@ -56,7 +57,7 @@
 }
 
 .service__item:before {
-  margin-left: 5px;
+  margin-left: 10px;
   top: 20px;
   left: -50px;
   position: absolute;
