--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -473,7 +473,8 @@ li {
 
 .service__item {
   position: relative;
-  margin-left: 50px; }
+  margin-left: 55px;
+  margin-right: 10px; }
   @media (min-width: 320px) {
     .service__item {
       width: 90%; } }
@@ -493,7 +494,7 @@ li {
   font-size: 13px; }
 
 .service__item:before {
-  margin-left: 5px;
+  margin-left: 10px;
   top: 20px;
   left: -50px;
   position: absolute;
@@ -527,9 +528,7 @@ li {
     display: block;
     width: 50%;
     background-image: url("../img/about.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: contain; } }
+    background-size: cover; } }
 
 .about__article {
   background-color: #ffc155; }
@@ -875,6 +874,9 @@ li {
 .container--copyright {
   height: inherit;
   flex-wrap: nowrap; }
+
+.social__items {
+  padding-left: 0; }
 
 .social__item {
   display: inline-block;
