--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -216,7 +216,8 @@ li {
   z-index: 1;
   position: absolute;
   width: 100%;
-  margin-top: 40px; }
+  margin-top: 40px;
+  max-width: 1500px; }
 
 .container {
   min-width: 320px;
