--- a/app/scss/_service.scss
+++ b/app/scss/_service.scss
@@ -26,7 +26,7 @@
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-left: -40px;
+  padding: 0;
 }
 
 .service__item {
